--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -137,7 +137,7 @@ All right reserved.
 .lower {
   text-transform: lowercase;
 }
-.cap {
+.capitalize {
   text-transform: capitalize;
 }
 .nowrap {
