--- a/src/components/x/colors.css
+++ b/src/components/x/colors.css
@@ -7,19 +7,41 @@ All right reserved.
 
 
 /*
+  .textPrimary
+  .textSuccess
+  .textWarning
+  .textDanger
+  
+  .bgPrimary
+  .bgSuccess
+  .bgWarning
+  .bgDanger
+  .bgGrey
+  
   .text[ColorName] - text color (d)
   .bg[ColorName] - background color (d)
 */
 
 
-.textPrimary  { color: #0088ee }
-.textSuccess  { color: #33c433 }
-.textDanger   { color: #ee3333 }
-.textWarning  { color: #ff8800 }
-.bgPrimary    { background-color: #0088ee }
-.bgSuccess    { background-color: #33c433 }
-.bgDanger     { background-color: #ee3333 }
-.bgWarning    { background-color: #ff8800 }
+:root {
+  --color-primary: #0088ee;
+  --color-success: #33c433;
+  --color-warning: #ff8800;
+  --color-danger: #ee3333;
+  --color-grey: #f1f1f1;
+}
+
+
+.textPrimary { color: var(--color-primary) !important }
+.textSuccess { color: var(--color-success) !important }
+.textWarning { color: var(--color-warning) !important }
+.textDanger  { color: var(--color-danger) !important }
+.bgPrimary   { background-color: var(--color-primary) !important }
+.bgSuccess   { background-color: var(--color-success) !important }
+.bgWarning   { background-color: var(--color-warning) !important }
+.bgDanger    { background-color: var(--color-danger) !important }
+.bgGrey      { background-color: var(--color-grey) !important }
+
 
 @each $color in AliceBlue, AntiqueWhite, Aqua, Azure, Beige, Bisque, Black, BlanchedAlmond, Blue, BlueViolet, Brown, Burlywood, CadetBlue, Chartreuse, Chocolate, Coral, CornflowerBlue, Cornsilk, Crimson, Cyan, DarkBlue, DarkCyan, DarkGoldenrod, DarkGray, DarkGreen, DarkGrey, DarkKhaki, DarkMagenta, DarkOliveGreen, DarkOrange, DarkOrchid, DarkRed, DarkSalmon, DarkSeaGreen, DarkSlateBlue, DarkSlateGray, DarkSlateGrey, DarkTurquoise, DarkViolet, DeepPink, DeepSkyBlue, DimGray, DimGrey, DodgerBlue, FireBrick, FloralWhite, ForestGreen, Fuchsia, Gainsboro, GhostWhite, Gold, Goldenrod, Gray, Green, GreenYellow, Grey, HoneyDew, HotPink, IndianRed, Indigo, Ivory, Khaki, Lavender, LavenderBlush, LawnGreen, LemonChiffon, LightBlue, LightCoral, LightCyan, LightGoldenrodYellow, LightGray, LightGreen, LightGrey, LightPink, LightSalmon, LightSeaGreen, LightSkyBlue, LightSlateGray, LightSlateGrey, LightSteelBlue, LightYellow, Lime, LimeGreen, Linen, Magenta, Maroon, MediumAquaMarine, MediumBlue, MediumOrchid, MediumPurple, MediumSeaGreen, MediumSlateBlue, MediumSpringGreen, MediumTurquoise, MediumVioletRed, MidnightBlue, MintCream, MistyRose, Moccasin, NavajoWhite, Navy, OldLace, Olive, OliveDrab, Orange, OrangeRed, Orchid, PaleGoldenrod, PaleGreen, PaleTurquoise, PaleVioletRed, PapayaWhip, PeachPuff, Peru, Pink, Plum, PowderBlue, Purple, RebeccaPurple, Red, RosyBrown, RoyalBlue, SaddleBrown, Salmon, SandyBrown, SeaGreen, SeaShell, Sienna, Silver, SkyBlue, SlateBlue, SlateGray, SlateGrey, Snow, SpringGreen, SteelBlue, Tan, Teal, Thistle, Tomato, Turquoise, Violet, Wheat, White, WhiteSmoke, Yellow, YellowGreen {
   
