--- a/src/components/x/buttons.css
+++ b/src/components/x/buttons.css
@@ -8,43 +8,58 @@ All right reserved.
 
 /*
   .button
-  .button_small  (m,l)
-  .button_normal (m,l)
-  .button_large  (m,l)
+  .button_fs[10-19] step 1 (m,l) - size in rem - 1.0, 1.1, 1.2, ..., 1.9
+  .button_fs[20-40] step 2 (m,l) - size in rem - 2.0, 2.2, 2.4, ..., 4.0
   
+  .button_label
   .button_primary
   .button_success
-  .button_danger
   .button_warning
+  .button_danger
   .button_white
   .button_black
 */
 
 
 :root {
-  /* Base styles */
-  --button-height: 4rem;
-  --button-side-padding: 2rem;
-  --button-font-family: var(--font-family);
-  --button-font-size: var(--font-size);
-  --button-font-weight: 400;
-  --button-border-radius: 1rem;
-  --button-disabled-opacity: .5;
+  /*
+    External variables:
+    typo.css
+      --font-family
+      --font-size
+    colors.css
+      --color-grey
+      --color-primary
+      --color-success
+      --color-warning
+      --color-danger
+  */
   
-  /* Transformations */
+  /* Required variables */
+  --button-height-coeff: 2.5;
+  --button-side-padding-coeff: 1.25;
+  --button-color: var(--color-grey);
+  --button-font-color: #000;
   --button-transition: all .1s ease-out;
+  --button-font-size: var(--font-size);
   --button-transform: scale(1);
   --button-transform-hover: scale(1);
   --button-transform-active: scale(.98);
   --button-transform-origin: center;
   
-  /* Colors */
-  --button-color: #f1f1f1;
-  --button-color-hover: #e7e7e7;
-  --button-color-active: var(--button-color-hover);
-  --button-font-color: #000;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
+  /*
+    Additional variables and their default values:
+    --button-height: 4rem;
+    --button-side-padding: 2rem;
+    --button-font-family: var(--font-family);
+    --button-font-weight: 400;
+    --button-disabled-opacity: .5;
+    --button-border-radius: calc(var(--button-font-size) * 0.6);
+    --button-color-hover: auto;
+    --button-color-active: auto;
+    --button-font-color-hover: auto;
+    --button-font-color-active: auto;
+  */
 }
 
 
@@ -54,12 +69,12 @@ All right reserved.
   align-items: center;
   justify-content: center;
   width: auto;
-  height: var(--button-height);
-  padding: 0 var(--button-side-padding);
+  height: var(--button-height, calc(var(--button-font-size) * var(--button-height-coeff)));
+  padding: 0 var(--button-side-padding, calc(var(--button-font-size) * var(--button-side-padding-coeff)));
   color: var(--button-font-color);
-  font-family: var(--button-font-family);
+  font-family: var(--button-font-family, var(--font-family));
   font-size: var(--button-font-size);
-  font-weight: var(--button-font-weight);
+  font-weight: var(--button-font-weight, 400);
   vertical-align: bottom;
   white-space: nowrap;
   text-align: center;
@@ -70,7 +85,7 @@ All right reserved.
   cursor: pointer;
   overflow: hidden;
   border: none;
-  border-radius: var(--button-border-radius);
+  border-radius: var(--button-border-radius, calc(var(--button-font-size) * 0.6));
   background-color: var(--button-color);
   transition: var(--button-transition);
   transform: var(--button-transform);
@@ -90,8 +105,8 @@ All right reserved.
     &:hover,
     &.hover {
       text-decoration: none;
-      color: var(--button-font-color-hover);
-      background-color: var(--button-color-hover);
+      color: var(--button-font-color-hover, var(--button-font-color));
+      background-color: var(--button-color-hover, color(from var(--button-color) display-p3 calc(r - 0.05) calc(g - 0.05) calc(b - 0.05)));
       transform: var(--button-transform-hover);
     }
   }
@@ -99,104 +114,80 @@ All right reserved.
   &:active,
   &.active {
     text-decoration: none;
-    color: var(--button-font-color-active);
-    background-color: var(--button-color-active);
+    color: var(--button-font-color-active, var(--button-font-color));
+    background-color: var(--button-color-active, color(from var(--button-color) display-p3 calc(r - 0.05) calc(g - 0.05) calc(b - 0.05)));
     transform: var(--button-transform-active);
   }
 
   &[disabled],
   &.disabled {
-    opacity: var(--button-disabled-opacity);
+    opacity: var(--button-disabled-opacity, .5);
     pointer-events: none;
   }
 }
 
-/* Predefined sizes */
 
-@define-extend button_small  {
-  --button-height: 3.2rem;
-  --button-side-padding: 1.4rem;
-}
-@define-extend button_normal  {
-  --button-height: 4rem;
-  --button-side-padding: 2rem;
-}
-@define-extend button_large  {
-  --button-height: 4.8rem;
-  --button-side-padding: 2.6rem;
-  --button-font-size: 2rem;
-}
+/* Button font sizes */
 
-.button_small  { @extend button_small }
-.button_normal { @extend button_normal }
-.button_large  { @extend button_large }
+@for $i from 10 to 19 {
+  .button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+}
+@for $i from 20 to 80 by 2 {
+  .button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+}
 
 @media (--medium) {
-  .m\:button_small  { @extend button_small }
-  .m\:button_normal { @extend button_normal }
-  .m\:button_large  { @extend button_large }
+  @for $i from 10 to 19 {
+    .m\:button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+  }
+  @for $i from 20 to 40 by 2 {
+    .m\:button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+  }
 }
+
 @media (--large) {
-  .l\:button_small  { @extend button_small }
-  .l\:button_normal { @extend button_normal }
-  .l\:button_large  { @extend button_large }
+  @for $i from 10 to 19 {
+    .l\:button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+  }
+  @for $i from 20 to 40 by 2 {
+    .l\:button_fs$(i) { --button-font-size: calc($(i)rem / 10) }
+  }
 }
+
+
+/* Button as label */
 
 .button_label {
   --button-height: 1.4em;
-  --button-side-padding: .6rem;
+  --button-side-padding: .5em;
   --button-font-size: inherit;
-  --button-border-radius: .8rem;
+  --button-border-radius: .5em;
   vertical-align: baseline;
 }
 
 /* Predefined styles */
 
 .button_primary {
-  --button-color: #0088ee;
-  --button-color-hover: #0078de;
-  --button-color-active: var(--button-color-hover);
+  --button-color: var(--color-primary);
   --button-font-color: #fff;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
 }
 .button_success {
-  --button-color: #33c433;
-  --button-color-hover: #23b423;
-  --button-color-active: var(--button-color-hover);
+  --button-color: var(--color-success);
   --button-font-color: #fff;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
-}
-.button_danger {
-  --button-color: #ee3333;
-  --button-color-hover: #de2323;
-  --button-color-active: var(--button-color-hover);
-  --button-font-color: #fff;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
 }
 .button_warning {
-  --button-color: #ff8800;
-  --button-color-hover: #ef7800;
-  --button-color-active: var(--button-color-hover);
+  --button-color: var(--color-warning);
   --button-font-color: #fff;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
+}
+.button_danger {
+  --button-color: var(--color-danger);
+  --button-font-color: #fff;
 }
 .button_white {
-  --button-color: #ffffff;
-  --button-color-hover: #efefef;
-  --button-color-active: var(--button-color-hover);
+  --button-color: #fff;
   --button-font-color: #000;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
 }
 .button_black {
-  --button-color: #000000;
-  --button-color-hover: #202020;
-  --button-color-active: var(--button-color-hover);
+  --button-color: #111;
   --button-font-color: #fff;
-  --button-font-color-hover: var(--button-font-color);
-  --button-font-color-active: var(--button-font-color);
 }
