--- a/src/components/x/links.css
+++ b/src/components/x/links.css
@@ -24,14 +24,14 @@ All right reserved.
 
 :root {
   --link-color: #0060bb;
+  --link-decoration-line: underline;
+  --link-decoration-style: solid;
   
   /*
     Additional variables and their default values:
     --link-color-hover: var(--link-color);
     --link-color-visited: var(--link-color);
-    --link-decoration-line: underline;
     --link-decoration-line-hover: var(--link-decoration-line-hover, var(--link-decoration-line));
-    --link-decoration-style: solid;
     --link-decoration-style-hover: var(--link-decoration-style-hover, var(--link-decoration-style));
     --link-decoration-thickness: .06em;
     --link-decoration-color: color-mix(in srgb, currentcolor, transparent 75%);
@@ -55,8 +55,8 @@ a {
     color: var(--link-color);
     transition: var(--link-transition, all .1s ease-out);
     
-    text-decoration-line: var(--link-decoration-line, underline);
-    text-decoration-style: var(--link-decoration-style, solid);
+    text-decoration-line: var(--link-decoration-line);
+    text-decoration-style: var(--link-decoration-style);
     text-decoration-color: var(--link-decoration-color, color-mix(in srgb, currentcolor, transparent 75%));
     text-decoration-thickness: var(--link-decoration-thickness, .06em);
     text-underline-offset: var(--link-underline-offset, .25em);
