--- a/src/components/x/icons.css
+++ b/src/components/x/icons.css
@@ -15,6 +15,8 @@ All right reserved.
   display: inline-block;
   width: 1em;
   height: 1em;
+  max-width: none;
+  max-height: none;
 }
 
 @for $i from 10 to 60 by 2 {
