--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -114,6 +114,12 @@ All right reserved.
 }
 
 
+/* !- Font smoothing */
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+}
+
+
 /* !- Container */
 .container {
   max-width: var(--container-max-width);
