--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -89,7 +89,7 @@ html {
   background-color: var(--background-color);
   font-synthesis: initial;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased; */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: #00000000;
   -moz-font-feature-settings: 'liga', 'kern';
